Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69284

Qt3D reparenting of existing node with newly created node fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • None
    • 5.11.0, 5.11.1
    • Qt3D
    • None
    • e75e49434fa8930037ae72b50c998e899739b91f

    Description

      This case currently fails

      QNode *root;

      QNode *child(root);

      // Process event loop 

      QNode *newParent(root);

      child->setParent(newParent)

       

      The main reason is that we always assumed the newParent would already exist in the backend which actually might not be the case. We should therefore identify if the new parent exists in the backend. If it doesn't, then when reparenting we should be emetting a change to destroy our backend child and trigger its recreation when newParent's backend is created

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lemire_p Paul Lemire
            lemire_p Paul Lemire
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes