Handle reparenting to nodes which have no backend

Change-Id: Ibbaae84a616afbe8be35904e9185be668e32f1c7
Task-number: QTBUG-69284
Reviewed-by: Mike Krus <mike.krus@kdab.com>
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>